--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="nl">
   <head>
@@ -17,7 +16,7 @@
     <meta name="twitter:site" content="@wafflething" />
     <meta name="twitter:image" content="/lovable-uploads/442e6b9e-a6ed-45b2-836b-1ada64824b2f.png" />
     
-    <link rel="icon" href="/lovable-uploads/442e6b9e-a6ed-45b2-836b-1ada64824b2f.png" type="image/png" />
+    <link rel="icon" href="/fotos/Schermafbeelding 2025-04-25 134844.png" type="image/png" />
   </head>
 
   <body>
