--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WaffleThing - De lekkerste wafels van Nederland</title>
-    <meta name="description" content="WaffleThing - Heerlijke, huisgemaakte wafels met de lekkerste toppings. Bestel telefonisch of kom langs bij onze foodtruck op festivals." />
-    <meta name="author" content="WaffleThing" />
+    <title>WaffelThing - De lekkerste wafels van Nederland</title>
+    <meta name="description" content="WaffelThing - Heerlijke, huisgemaakte wafels met de lekkerste toppings. Bestel telefonisch of kom langs bij onze foodtruck op festivals." />
+    <meta name="author" content="WaffelThing" />
 
-    <meta property="og:title" content="WaffleThing - De lekkerste wafels van Nederland" />
+    <meta property="og:title" content="WaffelThing - De lekkerste wafels van Nederland" />
     <meta property="og:description" content="Heerlijke, huisgemaakte wafels met de lekkerste toppings. Bestel telefonisch of kom langs bij onze foodtruck op festivals." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/lovable-uploads/442e6b9e-a6ed-45b2-836b-1ada64824b2f.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@wafflething" />
+    <meta name="twitter:site" content="@waffelthing" />
     <meta name="twitter:image" content="/lovable-uploads/442e6b9e-a6ed-45b2-836b-1ada64824b2f.png" />
     
     <link rel="icon" href="/fotos/Schermafbeelding 2025-04-25 134844.png" type="image/png" />
