naam, achtergrond, over ons tekst

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WaffelThing - De lekkerste wafels van Nederland</title>
-    <meta name="description" content="WaffelThing - Heerlijke, huisgemaakte wafels met de lekkerste toppings. Bestel telefonisch of kom langs bij onze foodtruck op festivals." />
-    <meta name="author" content="WaffelThing" />
+    <title>WaffelThingNL - De lekkerste wafels van Nederland</title>
+    <meta name="description" content="WaffelThingNL - Heerlijke, huisgemaakte wafels met de lekkerste toppings. Bestel telefonisch of kom langs bij onze foodtruck op festivals." />
+    <meta name="author" content="WaffelThingNL" />
 
-    <meta property="og:title" content="WaffelThing - De lekkerste wafels van Nederland" />
+    <meta property="og:title" content="WaffelThingNL - De lekkerste wafels van Nederland" />
     <meta property="og:description" content="Heerlijke, huisgemaakte wafels met de lekkerste toppings. Bestel telefonisch of kom langs bij onze foodtruck op festivals." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/lovable-uploads/442e6b9e-a6ed-45b2-836b-1ada64824b2f.png" />
